2005-04-15  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* VERSION :
	* configure :
	* configure.ac :

	  - Incremented version to 1.0.4.


	* main/operation.y :
	* main/parser.h :
	* main/vlad.cpp :

	  - Added a -t option in the main program to measure the time it takes
	    for the compute and query operations to complete.

	* README :
	* configure :
	* configure.ac :
	* lib/config.h.in :

	  - Added an --enable-timer option to enable the timer function.

2005-04-12  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/kb.cpp :

	  - Small typo fix in compute_generate(), in the inheritance rules.

2005-04-06  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* VERSION :
	* configure :
	* configure.ac :

	  - Incremented version to 1.0.3.

	* lib/kb.cpp :

	  - compute_generate() now dumps normal logic program in a
	    more "human readable" form.

2005-04-05  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* COPYING :
	* Makefile.in :
	* configure.ac :
	* rules.mk :
	* lib/Makefile.in :
	* lib/atom.cpp :
	* lib/atom.h :
	* lib/config.h.in :
	* lib/consttab.cpp :
	* lib/consttab.h :
	* lib/expression.cpp :
	* lib/expression.h :
	* lib/kb.cpp :
	* lib/kb.h :
	* lib/list.cpp :
	* lib/list.h :
	* lib/numberlist.cpp :
	* lib/numberlist.h :
	* lib/seqtab.cpp :
	* lib/seqtab.h :
	* lib/smwrap.cpp :
	* lib/smwrap.h :
	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* lib/symtab.cpp :
	* lib/symtab.h :
	* lib/transtab.cpp :
	* lib/transtab.h :
	* lib/vlad.h :
	* lib/wrapper.cpp :
	* lib/wrapper.h :
	* main/Makefile.in :
	* main/operation.l :
	* main/operation.y :
	* main/parser.h :
	* main/program.l :
	* main/program.y :
	* main/vlad.cpp :

	  - Changed copyright notice to include 2005.

	* VERSION :
	* configure.ac :
	* configure :

	  - Incremented version to 1.0.2.

	* lib/kb.cpp :
	* lib/kb.h :

	  - compute_generate() now dumps a normal logic program where each
	    atom is printed as it is, instead of it's internal numeric
	    representation.
